# cli-calc

./: .gitignore  CMakeLists.txt  README.md  globals.h  main.cpp
calc/: CMakeLists.txt  calc_test.cpp
data/: CMakeLists.txt
include/: globals.h
include/core/: dispatcher.h  eval.h  parser.h
include/data/: datatype_decl.h
include/utils/: expr_node.h  operator_table.h  symbol_table.h
numbers/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: dispatcher.cpp  eval.cpp  parser.cpp
src/data/: big_decimal.cpp
src/functional/: eval.cpp  numbers.cpp  stats.cpp
src/utils/: expr_node.cpp  operator_table.cpp  symbol_table.cpp
stats/: CMakeLists.txt
test/: CMakeLists.txt  test_data.cpp  test_functional.cpp
utils/: CMakeLists.txt
